--- a/docs/index.css
+++ b/docs/index.css
@@ -12,7 +12,6 @@ h2 {
 }
 
 font {
-    color: black;
 	text-align: center;
 	font-style: arial;
 }
@@ -93,6 +92,30 @@ input[type=login] {
 
 input[type=login]:hover {
     background-color: #A4A4A4;
+	color: white;
+	font-size: 18px;
+	font-weight: bold
+}
+
+
+input[type=desc] {
+    width: 15%;
+    background-color: #B40404;
+    color: white;
+    padding: 15px 20px;
+    margin: 5px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    text-align: center;
+	font-style: arial;
+	font-size: 14px;
+	font-weight: bold
+	
+}
+
+input[type=desc]:hover {
+    background-color: #610B0B;
 	color: white;
 	font-size: 18px;
 	font-weight: bold
